fix su connection giocatori